fix margins for cards on mobile, adjust layout for tablet

--- a/src/css/_responsive.scss
+++ b/src/css/_responsive.scss
@@ -11,8 +11,15 @@
     .article__body p {
         font-size: 1rem;
     }
+    .container {
+        width: 90%;
+    }
 }
 @include media-lg {
+    .container {
+        width: 80%;
+    }
+
     .account__details.user-display {
         width: 500px;
     }
