--- a/src/index.scss
+++ b/src/index.scss
@@ -29,7 +29,7 @@ img {
 
 .container {
     max-width: 1200px;
-    width: 80%;
+    width: 95%;
     margin: 0 auto;
 }
 
